--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2'
 services:
   influxdb:
-    image: influxdb:latest
+    image: influxdb:1.8.4-alpine
     ports:
       - '8086:8086'
     volumes:
-      - influxdb-volume:/var/lib/influxdb
+      - ./influxdb:/var/lib/influxdb
     environment:
       - INFLUXDB_DB=smac
       - INFLUXDB_ADMIN_USER=smac
@@ -15,7 +15,7 @@ services:
     ports:
       - '3001:3000'
     volumes:
-      - grafana-volume:/var/lib/grafana
+      - grafana:/var/lib/grafana
       - ./grafana-provisioning/:/etc/grafana/provisioning
     depends_on:
       - influxdb
@@ -23,5 +23,5 @@ services:
       - GF_SECURITY_ADMIN_USER=smac
       - GF_SECURITY_ADMIN_PASSWORD=smac
 volumes:
-  influxdb-volume:
-  grafana-volume:
+  influxdb:
+  grafana:
